--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    
     <p>
     <h2>About:</h2>
-    My name is Amy Techavimol. I'm a freshman in college majoring in Computer Science.
+    My name is Amy Techavimol. I'm a freshman at BYU and  majoring in Computer Science.
     </p>
 
     <p>
